# UR5_DualArm_Driver_ROS2

./: .gitignore  output.urdf  readme.md  start_sim_dual_ur5.sh
doc/: dual_ur5_ft_gripper_base.gv
src/Universal_Robots_ROS2_Driver/ur_robot_driver/config/: ur_controllers.yaml
src/Universal_Robots_ROS2_Driver/ur_robot_driver/launch/: SingleArm_ur_control.launch.py
src/dual_arm_demo/: CMakeLists.txt  package.xml
src/dual_arm_demo/config/: dual_arm_config.yaml
src/dual_arm_demo/src/: dual_arm_demo.cpp  dual_arm_move.cpp  dual_arm_node.cpp
src/dual_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_arm_moveit_config/config/: cartesian_limits.yaml  dual_ur5_ft_gripper_base.ros2_control.xacro  dual_ur5_ft_gripper_base.srdf  dual_ur5_ft_gripper_base.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur_servo.yaml
src/dual_arm_moveit_config/launch/: demo.launch.py  dual_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/dual_arm_moveit_config/rviz/: moveit_rviz.rviz
src/dual_description/: CMakeLists.txt  README.md  package.xml
src/dual_description/config/: base_frame.yaml  left_initial_positions.yaml  right_initial_positions.yaml
src/dual_description/config/calibration/: left_arm_calibration.yaml  right_arm_calibration.yaml
src/dual_description/gazebo/: empty.world  sim_env_circle_tray_smallbottle_glass.world  sim_env_smallbottle_glass.world  sim_env_table_cylinder.world
src/dual_description/include/dual_description/: dual_ur_gripper_node.h
src/dual_description/launch/: dual_moveit2_gazebo.launch.py  dual_planning.launch.py  view_dual.launch.py
src/dual_description/meshes/: dual_base.stl  plane_collision.stl
src/dual_description/meshes/glass_cup/: model.config  model.sdf
src/dual_description/meshes/green_box/: model.sdf
src/dual_description/meshes/green_box/green_box/: model.sdf
src/dual_description/moveit2/: joint_limits.yaml  ompl_planning.yaml  planning_pipelines_config.yaml
src/dual_description/rviz/: dual.rviz  dual_MTC.rviz  test_scene2.scene  view_urdf.rviz
src/dual_description/src/: dual_ur_gripper_node.cpp
src/dual_description/srdf/: dual_ur5_ft_gripper_base.srdf.xacro
src/dual_description/urdf/: dual_ur5_ft_gripper_base.urdf.xacro  out_with_plane.urdf  outputFake.urdf  output_Vrep.urdf  output_noGazebo.urdf  ur5_ft_gripper_macro.urdf.xacro
src/dual_ur5_arm_driver/: CMakeLists.txt  package.xml
src/dual_ur5_arm_driver/config/: leftArm_controllers.yaml  leftArm_ur5_update_rate.yaml  rightArm_controllers.yaml  rightArm_ur5_update_rate.yaml
src/dual_ur5_arm_driver/launch/: start_dual_arm_driver.launch.py
src/dual_ur5_arm_driver/urdf/: dual_ur5_ft_gripper_base.urdf.xacro  ur5_ft_gripper_macro.urdf.xacro
src/libs/gazebo-pkgs/gazebo_grasp_plugin/include/gazebo_grasp_plugin/: GazeboGraspFix.h  GazeboGraspGripper.h
src/libs/gazebo-pkgs/gazebo_grasp_plugin/src/: GazeboGraspFix.cpp  GazeboGraspGripper.cpp
src/libs/gazebo-pkgs/gazebo_version_helpers/: CMakeLists.txt
src/libs/moveit_task_constructor/.github/workflows/: ci.yaml
src/libs/py_binding_tools-ros2/: CMakeLists.txt
src/libs/robotiq_ft_sensor_description/urdf/: ft300.urdf.xacro  robotiq_ft300.urdf.xacro
src/libs/serial/tests/: unix_serial_tests.cc
src/libs/serial/tests/proof_of_concepts/: tokenizer.cc
src/libs/serial/visual_studio/: visual_studio.sln
src/libs/serial/visual_studio/serial/: serial.vcxproj  serial.vcxproj.filters
src/libs/serial/visual_studio/test_serial/: test_serial.vcxproj  test_serial.vcxproj.filters
src/ursim_script/: CMakeLists.txt  docker-compose.yml  docker_dual_ur5.sh  package.xml
src/ursim_script/ursim/programs_leftArm/: 10.5.0.1_50002.installation  10.5.0.1_50002.variables  default.installation  default.variables
src/ursim_script/ursim/programs_rightArm/: 10.5.0.1_60002.installation  10.5.0.1_60002.variables  default.installation  default.variables  default_1.installation
